argocd-apps/web-app.yaml
// nginx web-app config 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: argo-cd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: exam
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: 

        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: argo-cd

spec:
  selector:
    app: exam
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: LoadBalancer
