argocd-apps/eks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-ingress
  namespace: argo-cd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: prometheus.jubriladeyi.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  name: http
    - host: grafana.jubriladeyi.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: service
    - host: sockapp.jubriladeyi.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  name: http
                namespace: sock-shop
    - host: web-app.odeybright.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
  tls:
    - hosts:
        - prometheus.jubriladeyi.me
        - grafana.jubriladeyi.me
        - sock-shop.jubriladeyi.me
        - web-app.jubriladeyi.me
      secretName: jubril-adeyi
